package com.around_team.todolist.utils

object TestTags {
    const val TEXT_FIELD_TAG = "TEXT_FIELD_TAG"
    const val FAB_TAG = "FAB_TAG"
}