...
    <string name="hide">Скрыть</string>
    <string name="new_todo">Новое</string>

    <!--EditScreen-->
    <string name="cancel">Отменить</string>
    <string name="todo">Дело</string>
    <string name="save">Сохранить</string>
    <string name="what_todo">Что надо сделать?</string>
    <string name="priority">Важность</string>
    <string name="deadline">Сделать до</string>
    <string name="no">нет</string>
    <string name="color">Цвет</string>
    <string name="delete">Удалить</string>
    <string name="brightness">Яркость</string>

    <!--SettingsScreen-->
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="auto">авто</string>
...
